Updated presentation notebook

--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# Introduction to Python - [SESSION] - [DATE]\n",
+    "# Introduction to Python - DDI session - 18 November 2024\n",
     "\n",
     "Charlotte Desvages"
    ]
@@ -48,13 +48,7 @@
     }
    },
    "source": [
-    "## Zoom communication\n",
-    "\n",
-    "At the bottom of Zoom, use the **Reactions** menu:\n",
-    "\n",
-    "<img src=\"graphics/zoom.png\" alt=\"Zoom non-verbal feedback buttons.\" width=\"400\"/>\n",
-    "\n",
-    "You can also use the **chat** to ask questions."
+    "Please **do interrupt me if you have any questions!** You can also use the **chat** to ask questions, I will keep an eye on it."
    ]
   },
   {
@@ -67,7 +61,7 @@
    "source": [
     "### How do I code along?\n",
     "\n",
-    "## [SHORT LINK TO GITHUB REPO]\n",
+    "## [https://github.com/chdesvages/ddi-intro-python-nov24](https://github.com/chdesvages/ddi-intro-python-nov24)\n",
     "\n",
     "When you go to this URL, you should see the content of these slides. This is a **Jupyter notebook** -- a Python programming environment that runs in your browser. Wait until it loads completely (~1min), then:\n",
     "- scroll down until you see the flags 🚩🚩🚩. Then, click on the **Python code cell** just below. You should see a green frame appearing around it.\n",
@@ -79,23 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "print('Success! :)')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true,
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print('Success! :)')"
@@ -355,23 +333,7 @@
    },
    "outputs": [],
    "source": [
-    "s = \"ABC\"\n",
-    "t = 3 * s\n",
-    "print(t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "s = s + 'aaaaaa' + t\n",
-    "print(s)"
+    "s = \"ABC\""
    ]
   },
   {
@@ -414,10 +376,6 @@
    "outputs": [],
    "source": [
     "c = 1\n",
-    "print(type(c))\n",
-    "\n",
-    "c = c / 2\n",
-    "print(c)\n",
     "print(type(c))"
    ]
   },
@@ -430,12 +388,6 @@
    },
    "source": [
     "Now, if we divide 1 by 2, what should we get?\n",
-    "\n",
-    "```python\n",
-    "c = c / 2\n",
-    "print(c)\n",
-    "print(type(c))\n",
-    "```\n",
     "\n",
     "`c` is now a `float` (floating point number), which is how computers represent decimal numbers.\n",
     "\n",
@@ -526,7 +478,11 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = 10\n",
+    "y = 1\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,14 +492,7 @@
     }
    },
    "source": [
-    "We can also **construct Booleans** using **comparison operators**.\n",
-    "\n",
-    "```python\n",
-    "x = 10\n",
-    "y = 1\n",
-    "\n",
-    "print(x >= y)\n",
-    "```"
+    "We can also **construct Booleans** using **comparison operators**."
    ]
   },
   {
@@ -631,7 +580,7 @@
     "# Create a list called a\n",
     "a = [1, 2, 3, 10, 6]\n",
     "print(a)\n",
-    "print(a[4])"
+    "\n"
    ]
   },
   {
@@ -652,8 +601,7 @@
    "outputs": [],
    "source": [
     "# Change individual elements\n",
-    "a[3] = -5\n",
-    "print(a)"
+    "\n"
    ]
   },
   {
@@ -745,71 +693,30 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Python and data: the `pandas` library\n",
-    "\n",
-    "A **library** is a bit like an extra toolbox with specialist tools.\n",
-    "\n",
-    "`pandas` (Python Data Analysis Library) is particularly useful to deal with data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll use the [astronauts database](https://github.com/rfordatascience/tidytuesday/tree/master/data/2020/2020-07-14)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "astronauts = pd.read_csv('astronauts.csv')\n",
-    "print(type(astronauts))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "source": [
-    "For the second part of this session, I'm going to show you some examples of various things we can do with data in Python, using a library called **pandas** for manipulating data, and another library called **seaborn** for visualising data."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
    "source": [
     "# 🚩🚩🚩 Example 4\n",
     "\n",
-    "Run the cell below to import pandas and read the CSV file."
+    "The code below defines 2 lists, which contain the names of 5 cats, and their respective\n",
+    "ages (in the same order). Write code to display the names of the oldest\n",
+    "cat, the name of the youngest cat, and the average age of the 5 cats.\n",
+    "\n",
+    "Our code should work for any set of at least 2 cat names and ages, not\n",
+    "just for the example below.\n",
+    "\n",
+    "*Hints:*\n",
+    "\n",
+    "-   We will need to find the\n",
+    "    [index](https://docs.python.org/3/library/stdtypes.html#common-sequence-operations)\n",
+    "    (the position) of the\n",
+    "    [minimum](https://docs.python.org/3/library/functions.html#min) and\n",
+    "    [maximum](https://docs.python.org/3/library/functions.html#max) ages\n",
+    "    in the list `cat_ages`, and use it to find the correct names in the\n",
+    "    list `cat_names`.\n",
+    "-   The average age can be calculated as the\n",
+    "    [sum](https://docs.python.org/3/library/functions.html#sum) of all\n",
+    "    ages, divided by the [total number of\n",
+    "    cats](https://docs.python.org/3/library/functions.html#len)."
    ]
   },
   {
@@ -818,26 +725,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "astronauts = pd.read_csv('astronauts.csv')"
+    "cat_names = ['Olive', 'Muffin', 'Butterscotch', 'Mister Beans', 'Nala']\n",
+    "cat_ages = [7, 3, 12, 11, 5]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "Then, try these commands (one at a time):\n",
+    "---\n",
     "\n",
-    "```python\n",
-    "print(astronauts.columns)\n",
-    "astronauts.head()\n",
-    "astronauts.tail()\n",
-    "astronauts.head(10)\n",
-    "```"
+    "## `for` loops\n",
+    "\n",
+    "`for` loops iterate over the elements of a **sequence** (e.g. a list or\n",
+    "a string), in the order in which they appear in that sequence. The\n",
+    "syntax is as follows:\n",
+    "\n",
+    "``` python\n",
+    "for i in my_seq:\n",
+    "    [some instructions]\n",
+    "```\n",
+    "\n",
+    "The `for` loop uses a *placeholder variable* (`i` in the example above),\n",
+    "which is assigned with each element of `my_seq`, in turn.\n",
+    "\n",
+    "For example, we can loop over a list to print each of its elements\n",
+    "separately:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1, 2, 3, 10, 6]\n",
+    "\n",
+    "for element in a:\n",
+    "    print(f'The current element is {element}')\n",
+    "    \n",
+    "print('These are all the elements of a.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 🚩🚩🚩 Example 5\n",
+    "\n",
+    "For each cat in the list above, print \"[cat name] is [cat age] years old.\""
    ]
   },
   {
@@ -846,207 +782,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Summary statistics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "astronauts['age'] = astronauts['year_of_mission'] - astronauts['year_of_birth']\n",
-    "astronauts.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "astronauts['age'].describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Find the name of the 5 oldest astronauts\n",
-    "astronauts[['name', 'age']].sort_values(by='age', ascending=False).head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Data visualisation with `seaborn`\n",
-    "\n",
-    "The `seaborn` documentation has a great [examples gallery](https://seaborn.pydata.org/examples/index.html). Let's visualise some of the astronauts data.\n",
-    "\n",
-    "# 🚩🚩🚩 Example 5\n",
-    "\n",
-    "We want to show the **distribution** of **military vs. civilian** *and* **male vs. female** astronauts over the years."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "import seaborn as sns\n",
-    "\n",
-    "# Plot histograms using catplot\n",
-    "grid = sns.catplot(data=astronauts,           # the dataframe\n",
-    "                   x='year_of_mission',       # the x-axis (the bins)\n",
-    "                   col='military_civilian',   # separate plots for each value in the column 'military_civilian'\n",
-    "                   hue='sex',                 # different colours (hues) for male and female astronauts\n",
-    "                   kind='count',              # the type of plot (countplot, or a histogram)\n",
-    "                   legend=True,               # display the legend for the different colours\n",
-    "                   col_wrap=1,                # start new row of subplots after just 1 plot\n",
-    "                   height=3,                  # height of each plot\n",
-    "                   aspect=4)                  # aspect ratio of each plot (width/height)\n",
-    "\n",
-    "# Rotate the tick labels so we can read them all\n",
-    "grid.set_xticklabels(rotation=45,\n",
-    "                     verticalalignment='top',\n",
-    "                     horizontalalignment='right')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Let's look at flights to Mir and to the International Space Station."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "# \"|\" here means \"or\", but works on whole dataframes\n",
-    "rows = (astronauts['in_orbit'] == 'Mir') | (astronauts['in_orbit'] == 'ISS')\n",
-    "columns = ['year_of_mission', 'ascend_shuttle', 'in_orbit', 'hours_mission']\n",
-    "station_trips = astronauts.loc[rows, columns]\n",
-    "\n",
-    "# Group labels together\n",
-    "station_trips.loc[station_trips['ascend_shuttle'].str.contains('soyuz', case=False), 'ascend_shuttle'] = 'Soyuz'\n",
-    "station_trips.loc[station_trips['ascend_shuttle'].str.contains('sts', case=False), 'ascend_shuttle'] = 'Space Shuttle'\n",
-    "\n",
-    "ax = sns.relplot(data=station_trips,\n",
-    "                 x='year_of_mission',\n",
-    "                 y='hours_mission',\n",
-    "                 hue='ascend_shuttle',\n",
-    "                 style='in_orbit',\n",
-    "                 height=6,\n",
-    "                 aspect=2)\n",
-    "\n",
-    "ax.set_xticklabels(rotation=45,\n",
-    "                   verticalalignment='top',\n",
-    "                   horizontalalignment='right')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "# 🚩🚩🚩 Example 6\n",
-    "\n",
-    "- Change the code above to display the sex of the astronauts in 2 different colours, instead of the ascend shuttle.\n",
-    "- Change `'hours_mission'` to `'age'` above to plot the age of astronauts going to Mir or the ISS over the years.\n",
-    "- What is the average duration of a mission to Mir? to the ISS?\n",
-    "- How long was the longest mission, in **days**? Who was the astronaut?\n",
-    "- Which countries have sent civilians to space?\n",
-    "- How many astronauts were from the USSR?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Average duration of a mission to Mir and to the ISS\n",
-    "print(station_trips.loc[station_trips['in_orbit'] == 'Mir', 'hours_mission'].mean())\n",
-    "print(station_trips.loc[station_trips['in_orbit'] == 'ISS', 'hours_mission'].mean())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Longest mission, in days, and astronaut name\n",
-    "max_hours = station_trips['hours_mission'].max()\n",
-    "print(max_hours / 24)\n",
-    "\n",
-    "# Display the name of the astronaut, nationality, and year of mission\n",
-    "astronauts.loc[astronauts['hours_mission'] == max_hours, ['name', 'nationality', 'year_of_mission']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# 26 countries have sent civilians to space\n",
-    "print(astronauts.loc[astronauts['military_civilian'] == 'civilian', 'nationality'].unique())\n",
-    "print(astronauts.loc[astronauts['military_civilian'] == 'civilian', 'nationality'].nunique())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Count unique astronauts from the USSR (Russia + Ukraine)\n",
-    "astronauts.loc[astronauts['nationality'].str.startswith('U.S.S.R'), 'name'].nunique()"
-   ]
   },
   {
    "cell_type": "markdown",
@@ -1130,7 +865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
